--- a/client/src/components/atoms/form/Select/Select.css
+++ b/client/src/components/atoms/form/Select/Select.css
@@ -67,6 +67,7 @@
 	min-width: 100%;
 	max-width: var(--select-list-max-width, 480px);
     overflow: auto;
+    max-height: 200px;
     background: var(--color-surface-1);
     border: 1px solid var(--color-border);
     border-radius: .6rem;
