feat: implement NodeEditor with various editors for plugin node types feat & PluginBuilder store for managing plugin state and workflow

--- a/client/src/components/atoms/common/CollapsibleSection/CollapsibleSection.css
+++ b/client/src/components/atoms/common/CollapsibleSection/CollapsibleSection.css
@@ -48,8 +48,11 @@
   gap: 1rem;
 }
 
+/*
+??? 
 .editor-sidebar-item-body-container > div {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
+*/  
