--- a/client/src/components/organisms/scene/EditorSidebar/EditorSidebar.css
+++ b/client/src/components/organisms/scene/EditorSidebar/EditorSidebar.css
@@ -79,7 +79,7 @@
 }
 
 .editor-sidebar-header-container{ 
-    padding: 1.5rem 1.5rem 0;
+    padding: 1.5rem 1.5rem;
     display: flex;
     justify-content: space-between;
 }
