--- a/client/src/components/atoms/plugins/BaseNode/BaseNode.css
+++ b/client/src/components/atoms/plugins/BaseNode/BaseNode.css
@@ -1,8 +1,14 @@
 .workflow-node{
-    background-color: var(--color-bg);
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(3px);
     border-radius: .5rem;
     padding: 1rem 1.5rem;
     border: 1px solid var(--color-border-soft);
+    max-width: 300px;
+}
+
+.workflow-node--selected{
+    border-color: #3b82f6;
 }
 
 .workflow-node-header-container{
@@ -14,5 +20,14 @@
 .workflow-node-header-content{
     display: flex;
     flex-direction: column;
-    gap: .1rem;
+    gap: .2rem;
+}
+
+.workflow-node-description{
+    font-size: .8rem;
+    color: var(--color-text-muted);
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
